[gd_scene load_steps=15 format=2]

[ext_resource path="res://Script/Levels.gd" type="Script" id=1]
[ext_resource path="res://PlayFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Play.tres" type="StyleBox" id=3]
[ext_resource path="res://MainText.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/mainMenu.png" type="Texture" id=5]
[ext_resource path="res://ExitFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Exit.tres" type="StyleBox" id=7]
[ext_resource path="res://PlayHover.tres" type="StyleBox" id=8]
[ext_resource path="res://ExitHover.tres" type="StyleBox" id=9]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0509804, 0.168627, 0.490196, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.196078, 0.6, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false
anti_aliasing_size = 2.316

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.435294, 0.117647, 0.117647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.501961, 0.137255, 0.137255, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false
anti_aliasing_size = 2.316

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0509804, 0.160784, 0.462745, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.196078, 0.6, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false
anti_aliasing_size = 2.316

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0509804, 0.164706, 0.482353, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.196078, 0.6, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false
anti_aliasing_size = 2.316

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0431373, 0.14902, 0.443137, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.196078, 0.6, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false
anti_aliasing_size = 2.316

[node name="Levels" type="Node2D"]
script = ExtResource( 1 )

[node name="MainMenu" type="Sprite" parent="."]
position = Vector2( 241, 299 )
scale = Vector2( 0.580078, 0.589844 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 172.0
margin_top = 62.0
margin_right = 240.0
margin_bottom = 91.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0.701961, 0.0666667, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Levels"

[node name="Button" type="Button" parent="."]
margin_left = 234.0
margin_top = 240.0
margin_right = 434.0
margin_bottom = 295.0
focus_next = NodePath("../Button4")
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 3 )
text = "Level       2"

[node name="Button2" type="Button" parent="."]
margin_left = 104.0
margin_top = 420.0
margin_right = 354.0
margin_bottom = 480.0
focus_next = NodePath("../Button3")
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 7 )
text = "Main Menu"

[node name="Button3" type="Button" parent="."]
margin_left = 16.0
margin_top = 240.0
margin_right = 216.0
margin_bottom = 295.0
focus_next = NodePath("../Button")
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 3 )
text = "Level       1"

[node name="Button4" type="Button" parent="."]
margin_left = 16.0
margin_top = 309.0
margin_right = 216.0
margin_bottom = 364.0
focus_next = NodePath("../Button5")
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 3 )
text = "Level      3"

[node name="Button5" type="Button" parent="."]
margin_left = 235.0
margin_top = 308.0
margin_right = 435.0
margin_bottom = 363.0
focus_next = NodePath("../Button2")
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 3 )
text = "Level      4"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
